# RofiSchedule

./: Cargo.toml  README.md  main.py
src/: main.rs
